Finished moving to RESTful controllers, refactored code